--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "sass": "^1.79.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.7"
+    "vite": "^5.4.7",
+    "vite-plugin-singlefile": "^2.0.3"
   }
 }
