--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "yarn vite build",
+    "deploy": "gh-pages -d dist",
     "build": "tsc -b && vite build",
     "preview": "vite start",
     "stylelint": "stylelint \"src/**/*.{css,scss}\" --quiet --fix",
